add match resolver intial version

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,16 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.7</version>
+        </dependency>
 
         <!-- Tests dependencies -->
         <dependency>
