--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
     <groupId>com.bet-assistant</groupId>
     <artifactId>bet-assistant-service</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>bet-assistant-service</name>
-    <url>http://maven.apache.org</url>
+    <url>http://bet-assistant.com</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
