--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@
 .idea/**
 */.idea/*
 */.idea
+atlassian-ide-plugin.xml
+*/target/*
+target
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
